--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
+    "typewriter-effect": "^2.19.0",
     "v5": "^0.1.2",
     "web-vitals": "^2.1.4"
   },
